; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/libsas/extr_sas_init.c_sas_hae_reset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/libsas/extr_sas_init.c_sas_hae_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.work_struct = type { i32 }
%struct.sas_ha_event = type { %struct.sas_ha_struct* }
%struct.sas_ha_struct = type { i32 }

@HAE_RESET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sas_hae_reset(%struct.work_struct* %0) #0 {
  %2 = alloca %struct.work_struct*, align 8
  %3 = alloca %struct.sas_ha_event*, align 8
  %4 = alloca %struct.sas_ha_struct*, align 8
  store %struct.work_struct* %0, %struct.work_struct** %2, align 8
  %5 = load %struct.work_struct*, %struct.work_struct** %2, align 8
  %6 = call %struct.sas_ha_event* @to_sas_ha_event(%struct.work_struct* %5)
  store %struct.sas_ha_event* %6, %struct.sas_ha_event** %3, align 8
  %7 = load %struct.sas_ha_event*, %struct.sas_ha_event** %3, align 8
  %8 = getelementptr inbounds %struct.sas_ha_event, %struct.sas_ha_event* %7, i32 0, i32 0
  %9 = load %struct.sas_ha_struct*, %struct.sas_ha_struct** %8, align 8
  store %struct.sas_ha_struct* %9, %struct.sas_ha_struct** %4, align 8
  %10 = load i32, i32* @HAE_RESET, align 4
  %11 = load %struct.sas_ha_struct*, %struct.sas_ha_struct** %4, align 8
  %12 = getelementptr inbounds %struct.sas_ha_struct, %struct.sas_ha_struct* %11, i32 0, i32 0
  %13 = call i32 @clear_bit(i32 %10, i32* %12)
  ret void
}

declare dso_local %struct.sas_ha_event* @to_sas_ha_event(%struct.work_struct*) #1

declare dso_local i32 @clear_bit(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
